--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -4,14 +4,14 @@
 
 <div class="bg"></div>
 <div class="models">
-    <section class="section sedans">
-       <div class="stitch-2 d-none d-sm-block"></div>
+    <section class="section sedans" id="sedans">
+       <div class="stitch-2 d-none d-md-block"></div>
         <div class="container px-5">
-            <div class="row my-5 text-xs-center">
-                <div class="col-12 col-sm-3">
+            <div class="row my-5 text-xs-center text-left">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <h1 class="display-4">Sedans</h1>  
                 </div>
-                <div class="col-12 col-sm-4"> 
+                <div class="col-12 col-sm-6 col-md-5"> 
                 <span class="h4 light">Ride comfortably an in style with Lexus' wide range of sedans</span>  </div>
             </div>
             <div class="row">
@@ -65,12 +65,12 @@
             </div>
         </div>
     </section>
-    <section class="section suvs angle--both-left-left">
+    <section class="section suvs angle--both-left-left" id="suvs">
        <div class="stitch-3 d-none d-sm-block"></div>
        <div class="stitch-4 d-none d-sm-block"></div>
         <div class="container px-5">
             <div class="row my-5 text-xs-center">
-                <div class="col-12 col-sm-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <h1 class="display-4">SUVS</h1>  
                 </div>
                 <div class="col-12 col-sm-4"> 
@@ -118,12 +118,12 @@
         </div>
     </section>
     
-    <section class="section coupes text-white">
+    <section class="section coupes text-white" id="coupes">
         <div class="container px-5">
             <div class="stitch-5 d-none d-sm-block"><img src="/images/stitch-5.png" alt=""></div>
             <div class="stitch-6 d-none d-sm-block"><img src="/images/stitch-6.png" alt=""></div>
             <div class="row my-5 text-xs-center">
-                <div class="col-12 col-sm-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <h1 class="display-4">Coupes</h1>  
                 </div>
                 <div class="col-12 col-sm-4"> 
@@ -161,20 +161,18 @@
         <div class="stitch-7 d-none d-sm-block"></div>
         <div class="container">
             <div class="row text-xs-center">
-                <div class="row my-4">
-                     <div class="col">
-                         <div class="display-4">Lexus Dealerships</div>
-                     </div>
+                <div class="col my-4">                 
+                    <div class="display-4">Lexus Dealerships</div>   
                 </div>
             </div>
             <div class="row mx-auto text-center my-5">
-                    <div class="col-12 col-sm-4">
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
                         <div class="card text-left">
                             <img src="/images/map.jpg" alt="" class="midrand-map">
                              <span>Find out more about the Midrand Dealership</span>
                             <div class="card-header">
                                 <span class="h3 text-uppercase">Midrand</span>
-                                <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                <img src="/images/bidvest-logo-white.png" height="25" alt="" class="float-right">
                             </div>
                             <div class="card-body">
                                 <span class="d-block">1682 New Rd</span>
@@ -186,13 +184,13 @@
                             </div>
                         </div>               
                     </div>
-                    <div class="col-12 col-sm-4">
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
                        <div class="card text-left">
                             <img src="/images/map.jpg" alt="" class="midrand-map">
                             <span>Find out more about the Kingsmead Dealership</span>
                             <div class="card-header">
                                 <span class="h3 text-uppercase">Kingsmead</span>
-                                <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                <img src="/images/bidvest-logo-white.png" height="25" alt="" class="float-right">
                             </div>
                             <div class="card-body">
                                 <span class="d-block">1682 New Rd</span>
@@ -204,13 +202,13 @@
                             </div>
                         </div>   
                     </div>
-                    <div class="col-12 col-sm-4">
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
                       <div class="card text-left">
                             <img src="/images/map.jpg" alt="" class="midrand-map">
                              <span>Find out more about the Lynwood Dealership</span>
                             <div class="card-header">
                                 <span class="h3 text-uppercase">Lynwood</span>
-                                <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                <img src="/images/bidvest-logo-white.png" height="25" alt="" class="float-right">
                             </div>
                             <div class="card-body">
                                 <span class="d-block">1682 New Rd</span>
