--- a/Views/Shared/footer.cshtml
+++ b/Views/Shared/footer.cshtml
@@ -1,9 +1,9 @@
-﻿<footer class="p-5">
+﻿<footer class="p-4">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-12 col-md-6">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
                             <li><a href="">Home</a></li>
                             <li><a href="">Specials</a></li>
@@ -11,7 +11,7 @@
                             <li><a href="">Team</a></li>
                         </ul>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
                             <li><a href="">New Cars</a></li>
                             <li><a href="">Sedans</a></li>
@@ -19,53 +19,48 @@
                             <li><a href="">Coupes</a></li>
                         </ul>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
                             <li><a href="">Used</a></li>
                             <li><a href="">Sedans</a></li>
                             <li><a href="">SUV's</a></li>
                             <li><a href="">Coupses</a></li>
                         </ul>
-                    </div>
-                    <div class="col-3">
-                        <ul class="list-unstyled">
-                            <li><a href="">Used</a></li>
-                            <li><a href="">Sedans</a></li>
-                            <li><a href="">SUV's</a></li>
-                            <li><a href="">Coupses</a></li>
-                        </ul>
-                    </div>
-                </div>
-                
+                    </div>              
+                </div>            
             </div>
-            <div class="col-md-6 offset-2">
-                <div class="row justify-content-end w-100">
-                    <div class="col-3">
+            <div class="col-12 col-md-6">
+                <div class="row justify-content-md-end justify-content-sm-start">
+                    
+                    <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
                             <li><a href="">Terms & Conditions</a></li>
                             <li><a href="">Club McCarthy</a></li>
                             <li><a href="">Bidvest Insurance</a></li>
+                            <li><a href="">Coupses</a></li>
                         </ul>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
                             <li><a href="">Privacy Policy</a></li>
                             <li><a href="">McCarthy</a></li>
-                            <li><a href="">My Lexus App</a></li>              
+                            <li><a href="">My Lexus App</a></li> 
+                            <li><a href="">Coupses</a></li>             
                         </ul>
                     </div>
+                    
                 </div>
             </div>
         </div>
-        <div class="row mt-3 justify-content-end w-100">
-            <div class="col-10">
-                <img src="/images/bidvest-club-mccarthy-logo.png" alt="" height="50" class="mr-4">
-                <img src="/images/lexus-logo-2.png">
+        <div class="row mt-3 justify-content-md-end justify-content-sm-start">
+            <div class="col-12 col-md-6 mb-3">
+                <a href=""><img src="/images/bidvest-club-mccarthy-logo.png" alt="" height="50" class="mr-2"></a>
+                <a href=""><img src="/images/lexus-logo-2.png"></a>
             </div>
-            <div class="col">
-                <img src="images/app-store.png" alt="">
-                <img src="images/google-play.png" alt="">
-                <p class="text-white text-capitalize mt-2">&copy; 2018 Lexus South Africa</p>
+            <div class="col-12 col-md-6 text-md-right">
+                <a href=""><img src="images/app-store.png" alt=""></a>
+                <a href=""><img src="images/google-play.png" alt=""></a>
+                <span class="text-white text-capitalize d-block">&copy; 2018 Lexus South Africa</span>
             </div>
         </div>
     </div>
