--- a/Views/Shared/specials-contact.cshtml
+++ b/Views/Shared/specials-contact.cshtml
@@ -1,6 +1,4 @@
-<div class="dealer-name">Lexus Midrand</div>
-<div class="dealer-num">087 233 3235</div>
-<form class="p-3">     
+<form class="p-md-3">    
     <div class="form-group req">
         <label for="name2" class="mb-0">Name</label>
         <span></span>
@@ -41,5 +39,5 @@
         Need Finance
     </label>
 
-    <button type="submit" class="btn btn-secondary btn-lg btn-block mt-4">Email Dealer</button>
+    <button type="submit" class="btn btn-secondary btn-lg btn-block my-4">Email Dealer</button>
 </form>
