--- a/Views/Shared/specials-facets.cshtml
+++ b/Views/Shared/specials-facets.cshtml
@@ -1,4 +1,4 @@
-    <p>Dealerships</p>
+    <p class="pt-3">Dealerships</p>
     <div class="search-list">
         <div class="active">
             <a href="/cars/lexus/sedan/">Lyndwood</a>
