--- a/Views/Home/dealers.cshtml
+++ b/Views/Home/dealers.cshtml
@@ -1,24 +1,89 @@
-@{
-    ViewData["Title"] = "Dealers";
-}
-<div class="home-page">
-    <section class="section hero">
-                <div class="container">
-                   <div class="row my-5" style="height:400px">
-                       <div class="col">
-                           <h1 class="display-4">Dealers</h1>
-                        </div>
-                   </div>
-                </div>
-    </section> 
-    <section class="car-specials my-5">
+ @{ ViewData["Title"] = "Dealers"; }
+
+<div class="lexus-shared">
+    <section class="section dealers-hero angle--bottom-right">
         <div class="container">
-            <div class="row my-4">
+            <div class="row my-5" style="height:200px">
                 <div class="col">
-<!--                    <div class="h4 light">Exclusive deals of other similar models to the IS 200T EX</div>      -->
-                </div>  
+                    <img src="/images/bidvest-logo-white.png" alt="" height="50" class="my-4">
+                    <h1 class="display-4">@ViewBag.Title</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="car-dealerships my-5">
+        <div class="container">
+            <div class="row text-xs-center">
+                <div class="row m-4">
+                    <div class="col">
+                        <div class="h3 text-uppercase text-muted">Nearsest Dealership</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <div class="row mx-auto text-center mb-4">
+                        <div class="col-12">
+                            <a href="/dealer-detail">
+                                <div class="card text-left mb-4">
+                                    <div class="card-header">
+                                        <span class="h3 text-uppercase">Midrand</span>
+                                        <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                    </div>
+                                    <div class="card-body">
+                                        <span class="d-block">1682 New Rd</span>
+                                        <span class="d-block">Carswald</span>
+                                        <span class="d-block">Midrand</span>
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-12">
+                            <a href="/dealer-detail">
+                                <div class="card text-left mb-4">
+                                    <div class="card-header">
+                                        <span class="h3 text-uppercase">Kingsmead</span>
+                                        <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                    </div>
+                                    <div class="card-body">
+                                        <span class="d-block">1682 New Rd</span>
+                                        <span class="d-block">Carswald</span>
+                                        <span class="d-block">Midrand</span>
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-12">
+                            <a href="/dealer-detail">
+                                <div class="card text-left">
+                                    <div class="card-header">
+                                        <span class="h3 text-uppercase">Lynwood</span>
+                                        <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                    </div>
+                                    <div class="card-body">
+                                        <span class="d-block">1682 New Rd</span>
+                                        <span class="d-block">Carswald</span>
+                                        <span class="d-block">Midrand</span>
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-7">
+                    <div id="map"></div>    
+                </div>
             </div>
         </div>
     </section>
 </div>
-
