--- a/wwwroot/scss/lexus.scss
+++ b/wwwroot/scss/lexus.scss
@@ -57,9 +57,10 @@ html,
 
 //Pages
 @import "pages/specials"; 
-@import "pages/home"; 
+@import "pages/general"; 
 @import "pages/pre-owned"; 
 @import "pages/models"; 
+@import "pages/dealers"; 
 
 
 
